Updates from ShareLaTeX

--- a/05sorteringogsoking.tex
+++ b/05sorteringogsoking.tex
@@ -444,12 +444,13 @@ Et binært søketre er et tre som tilfredsstiller binært-søketre-egenskapen.
     \end{tabular}
 \end{table}
 
-\noindent \textbf{Eksempel}\\
+\begin{boxed}
 Hvis du setter verdiene 1, 2, 9, 5, 10, 7, 6, 4, 8 og 3 inn i et tomt binærtre (én etter én, i oppgitt rekkefølge), hva blir høyden til treet (antall kanter i den lengste stien fra rota til en løvnode)?
-
+\newline\newline
 5
-\\\\
-\noindent \textbf{Eksempel}\\
+\end{boxed}
+
+\begin{boxed}
 La $x$ være en gitt node i søketreet. Hvis $y$ er en node i det venstre subtreet til $x$ må $y$ sin verdi være mindre eller lik ($\leq$) $x$ sin verdi. Tilsvarende for høyre subtre. Her må $y$ sin verdi være større enn eller lik ($\geq$) $x$ sin verdi.
 
 \begin{figure}[H]
@@ -458,4 +459,5 @@ La $x$ være en gitt node i søketreet. Hvis $y$ er en node i det venstre subtre
 \caption{Binært tre}
 \label{fig:binaer}
 \end{figure}
+\end{boxed}
 
